# hpc_allocator_rust

./: .travis.yml  Cargo.toml  README.md  build.rs
bench/: Config.cpp  Config.hpp  Makefile  PerfTracker.cpp  PerfTracker.hpp  ProgressBar.cpp  ProgressBar.hpp  bench.cpp  bench.sh  main.cpp
bench/from-mpc-allocator-cpp/: AllocTraceStruct.h  PosixAllocatorFileTrace.cpp  PosixAllocatorFileTrace.h  PosixAllocatorStd.cpp  PosixAllocatorStd.h
src/: export.rs  lib.rs
src/chunk/: dummy.rs  huge.rs  mod.rs  pad.rs  padding.rs
src/chunk/medium/: allocator.rs  chunk.rs  manager.rs  mod.rs  pools.rs
src/chunk/small/: container.rs  manager.rs  mod.rs  run.rs
src/common/: consts.rs  list.rs  mod.rs  mpscf_queue.rs  ops.rs  region_registry.rs  shared.rs  traits.rs  types.rs
src/mmsource/: cached.rs  dummy.rs  mod.rs
src/portability/: arch.rs  hwloc.rs  libc.rs  libnuma.rs  mem.rs  mod.rs  osmem.rs  spinlock.rs
src/posix/: local.rs  mod.rs  numa.rs  seq.rs  uma.rs
src/registry/: mod.rs  region.rs  registry.rs  segment.rs  segments.rs
