[package]
name = "mpc_allocator_rust"
version = "0.1.0"
authors = ["Sebastien Valat <sebastien.valat@gmail.com>"]
panic = "abort"

[lib]
name = "hpc_allocator_rust"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = {version = "0.2", default-features = false}

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
